microservices/quotemachine/quoteapi/deployment/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: quoteapi
  name: quoteapi
  namespace: quotemachine
spec:
  replicas: 1
  selector:
    deploymentconfig: quoteapi
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: quoteapi
        deploymentconfig: quoteapi       
    spec:
      containers:
      - image: <CONTAINER>
        imagePullPolicy: Always
        name: quoteapi
        ports:
        - containerPort: 8080
          protocol: TCP
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - quoteapi
      from:
        kind: ImageStreamTag
        name: quoteapi:latest
        namespace: <PROJECT>
    type: ImageChange
  - type: ConfigChange
