microservices/quotemachine/quoteapi/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quoteapi
  name: quoteapi
  namespace: <PROJECT>
spec:
  ports:
  - name: 8001-tcp
    port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    deploymentconfig: quoteapi
  type: ClusterIP
